# back

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  dockerhub_build.sh  dockerhub_build_amd64.sh  dockerhub_build_arm64.sh  local_docker_build.sh  local_docker_run.sh
arch/amd64/: compose_run.sh  docker-compose.yml
arch/arm64/: docker-compose.yml
database/: Dockerfile  db_run.sh  dockerhub_build_amd64.sh  dockerhub_build_arm64.sh  init.sql
src/: lib.rs  main.rs
src/config/: db_config.rs  mod.rs
src/controller/: mod.rs
src/dto/: UserLogin.rs  mod.rs
src/enums/: farm_url_division.rs  mod.rs  user_role.rs
src/farm_service/: farm.rs  farm_review.rs  farm_urls.rs  mod.rs  request_form.rs
src/fv_user/: fv_user_dao.rs  fv_user_dto.rs  mod.rs
src/member/: fv_user_dto.rs  mod.rs
src/repository/: match_pg_row.rs  mod.rs  query_to_string.rs  query_utils.rs  trait_dao_dto.rs
src/resources/: dev.toml  local.toml
src/user_service/: fv_user.rs  mod.rs
src/utils/: mod.rs
tests/: db_connection_test.rs
