[package]
name = "fall_vacation_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#codegen-units = 1

[dependencies]
rocket = { version = "0.5.0-rc.2", feature = ["json"] }
#rocket_json = "0.1.4"
chrono = "0.4.22"
postgres = "0.19.4"
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"