[package]
name = "fall_vacation_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#codegen-units = 1

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
#chrono = "0.4.22"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate", "chrono"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]